With also the strange problem - : Attempting to execute an operation on a closed EntityManagerFactory.

--- a/maven/meteocal/meteocal-web/src/main/webapp/Error.xhtml
+++ b/maven/meteocal/meteocal-web/src/main/webapp/Error.xhtml
@@ -15,7 +15,7 @@ and open the template in the editor.
     <body>
         <div id="header">
             <p:message severity="fatal">
-                Something Wrong.
+                #{errorBean.message}
             </p:message>
         </div>
     </body>
