--- a/maven/meteocal/meteocal-web/src/main/webapp/protected/personal/HomeCalendar.xhtml
+++ b/maven/meteocal/meteocal-web/src/main/webapp/protected/personal/HomeCalendar.xhtml
@@ -11,7 +11,7 @@ and open the template in the editor.
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:p="http://primefaces.org/ui">
     <h:head>
-        <title>Home Calendar | Monthly</title>
+        <title>Home Calendar</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <link type="text/css" rel="stylesheet"
               href="#{request.contextPath}/Resources/css/style.css" />
@@ -21,7 +21,7 @@ and open the template in the editor.
             <ui:include src="/Components/TopBar.xhtml"></ui:include>
         </div>
         <div id="wrapper" style="text-align: center ; width: 95%">
-            <p:tabMenu activeIndex="1">
+            <p:tabMenu activeIndex="0">
                 <p:menuitem value="Monthly" outcome="/protected/personal/HomeCalendarMonth.xhtml" icon="ui-icon-star">
                     <f:param name="i" value="0" />
                 </p:menuitem>
@@ -32,8 +32,8 @@ and open the template in the editor.
                     <f:param name="i" value="2" />
                 </p:menuitem>
             </p:tabMenu>
-            <p:schedule value="#{homeWeeklyBean.visibleEvents}" draggable="false" leftHeaderTemplate="prev,next,today" rightHeaderTemplate="prevYear,nextYear"  style="width: 90% ; margin:auto; height: 800px" />
+            <p:schedule value="#{homeBean.visibleEvents}" draggable="false" leftHeaderTemplate="prev,next,today" rightHeaderTemplate="prevYear,nextYear"  style="width: 90% ; margin:auto; height: 800px" />
             <p:ajax event="eventSelect" listener="#{listener.onEventSelect}"></p:ajax>
-        </div>
-    </body>
+    </div>
+</body>
 </html>
