Filters working, Navigation rules done, Invitations and Notifications page done but not tested.

--- a/maven/meteocal/meteocal-web/src/main/webapp/Error.xhtml
+++ b/maven/meteocal/meteocal-web/src/main/webapp/Error.xhtml
@@ -14,9 +14,10 @@ and open the template in the editor.
     </h:head>
     <body>
         <div id="header">
-            <p:message severity="fatal">
-                #{errorBean.message}
-            </p:message>
+            <!--<p:message severity="fatal">
+                An error occured, please surf safely.
+            </p:message>-->
+            An error occured
         </div>
     </body>
 </html>
