--- a/maven/meteocal/meteocal-web/src/main/webapp/protected/personal/ManageInvitations.xhtml
+++ b/maven/meteocal/meteocal-web/src/main/webapp/protected/personal/ManageInvitations.xhtml
@@ -20,7 +20,7 @@ and open the template in the editor.
         <div>
             
         <h:form>    
-            <p:dataTable var="invitation" value="#{invitationManagementBean.notifications}">
+            <p:dataTable var="invitation" value="#{invitationManagementBean.invitations}">
                 <p:column headerText="DateTime">
                     <h:outputText value="#{invitation.event.id}" />
                 </p:column>
