Progress on world structure.

--- a/maven/meteocal/meteocal-web/src/main/webapp/Test/testGetWorld.xhtml
+++ b/maven/meteocal/meteocal-web/src/main/webapp/Test/testGetWorld.xhtml
@@ -13,6 +13,6 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </head>
     <body>
-        <h:form><p:commandButton action="#{testWeatherForecastUpdaterBean.test()}" value="Forecast" type="submit" ajax="false" styleClass="block" /></h:form>
+        <h:form><p:commandButton action="#{testGetWorldBean.test()}" value="Get world" type="submit" ajax="false" styleClass="block" /></h:form>
     </body>
 </html>
