runnable post getting libraries, problems in navigation rules.

--- a/maven/meteocal/meteocal-web/src/main/webapp/protected/event/EventEdit.xhtml
+++ b/maven/meteocal/meteocal-web/src/main/webapp/protected/event/EventEdit.xhtml
@@ -14,7 +14,7 @@ and open the template in the editor.
         <title>Events Editing</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </h:head>
-    <body>
+    <h:body>
         <f:event listener="#{filterEventEdit.isAdmin}" type="preRenderView" />
             
         <ui:include src="/Components/TopBar.xhtml"></ui:include>
@@ -57,5 +57,5 @@ and open the template in the editor.
                 </h:panelGrid>
             </p:panel>
         </h:form>
-    </body>
+    </h:body>
 </html>
