--- a/maven/meteocal/meteocal-web/src/main/webapp/protected/SearchResults.xhtml
+++ b/maven/meteocal/meteocal-web/src/main/webapp/protected/SearchResults.xhtml
@@ -8,10 +8,9 @@ and open the template in the editor.
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:ui="http://java.sun.com/jsf/facelets"
-      xmlns:p="http://primefaces.org/ui"
-      <head>
+      xmlns:p="http://primefaces.org/ui"/>
+      <h:head>
         <title>Search Results</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <style type="text/css">
             #left{
                 width: 45%;
@@ -27,7 +26,7 @@ and open the template in the editor.
                 text-align: center;
             }
         </style>
-    </head>
+    </h:head>
     <body>
         <div id="container">
             <div id="left">
