--- a/maven/meteocal/meteocal-web/src/main/webapp/protected/SearchResults.xhtml
+++ b/maven/meteocal/meteocal-web/src/main/webapp/protected/SearchResults.xhtml
@@ -4,11 +4,11 @@ To change this license header, choose License Headers in Project Properties.
 To change this template file, choose Tools | Templates
 and open the template in the editor.
 -->
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:f="http://xmlns.jcp.org/jsf/core"
-      xmlns:ui="http://java.sun.com/jsf/facelets"
-      xmlns:p="http://primefaces.org/ui"/>
+      xmlns:p="http://primefaces.org/ui">
       <h:head>
         <title>Search Results</title>
         <style type="text/css">
@@ -27,7 +27,7 @@ and open the template in the editor.
             }
         </style>
     </h:head>
-    <body>
+    <h:body>
         <div id="container">
             <div id="left">
                 <p:panel id="privacyPanel" header="List of compatible Users" footer="Users" style="margin-top:70px" class="panelForm">     
@@ -59,5 +59,5 @@ and open the template in the editor.
                 </p:panel>
             </div>
         </div>
-    </body>
+    </h:body>
 </html>
