--- a/maven/meteocal/meteocal-web/src/main/webapp/Test/testWeatherForecastUpdater.xhtml
+++ b/maven/meteocal/meteocal-web/src/main/webapp/Test/testWeatherForecastUpdater.xhtml
@@ -13,6 +13,9 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </head>
     <body>
-        <h:form><p:commandButton action="#{testWeatherForecastUpdaterBean.test()}" value="Forecast" type="submit" ajax="false" styleClass="block" /></h:form>
+        <h:form><p:commandButton action="#{testWeatherForecastUpdaterBean.testShortForecast()}" value="Short range forecast" type="submit" ajax="false" styleClass="block" /></h:form>
+        <h:form><p:commandButton action="#{testWeatherForecastUpdaterBean.testLongForecast()}" value="Long range forecast" type="submit" ajax="false" styleClass="block" /></h:form>
+        <h:form><p:commandButton action="#{testWeatherForecastUpdaterBean.testAskForecastsShort()}" value="AskForecasts short range only" type="submit" ajax="false" styleClass="block" /></h:form>
+        <h:form><p:commandButton action="#{testWeatherForecastUpdaterBean.testAskForecastsShortLong()}" value="AskForecasts short and long range" type="submit" ajax="false" styleClass="block" /></h:form>
     </body>
 </html>
