--- a/maven/meteocal/meteocal-web/src/main/webapp/protected/personal/ManageEvents.xhtml
+++ b/maven/meteocal/meteocal-web/src/main/webapp/protected/personal/ManageEvents.xhtml
@@ -65,7 +65,7 @@ and open the template in the editor.
                 </p:column>
 
                 <p:column headerText="Creator">
-                    <h:outputText value="#{event.creator}" />
+                    <h:outputText value="#{event.creator.username}" />
                 </p:column>
             </p:dataTable>
         </h:form>
