filters and invitations

--- a/maven/meteocal/meteocal-web/src/main/webapp/Error.xhtml
+++ b/maven/meteocal/meteocal-web/src/main/webapp/Error.xhtml
@@ -17,7 +17,10 @@ and open the template in the editor.
             <!--<p:message severity="fatal">
                 An error occured, please surf safely.
             </p:message>-->
-            An error occured
+            Hi,
+            if you've arrived here, there are not too much possibilities:
+            1_ You've tried to hack our systems and this is not good.
+            2_ An error may occur, just alert the admins please!
         </div>
     </body>
 </html>
