--- a/maven/meteocal/meteocal-web/src/main/webapp/protected/event/EventCreate.xhtml
+++ b/maven/meteocal/meteocal-web/src/main/webapp/protected/event/EventCreate.xhtml
@@ -15,6 +15,7 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </h:head>
     <body>
+        <f:event listener="#{notLoggedFilter.check}" type="preRenderView" />
         <div id="header">
             <ui:include src="/Components/TopBar.xhtml"></ui:include>
         </div>
