--- a/maven/meteocal/meteocal-web/src/main/webapp/protected/event/EventPage.xhtml
+++ b/maven/meteocal/meteocal-web/src/main/webapp/protected/event/EventPage.xhtml
@@ -13,6 +13,7 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </h:head>
     <body>
+        <f:event listener="#{notLoggedFilter.check}" type="preRenderView" />
         <f:event listener="#{filterEvent.check}" type="preRenderView" />
     </body>
 </html>
