--- a/maven/meteocal/meteocal-web/src/main/webapp/protected/event/EventPageCreator.xhtml
+++ b/maven/meteocal/meteocal-web/src/main/webapp/protected/event/EventPageCreator.xhtml
@@ -16,6 +16,7 @@ and open the template in the editor.
     </h:head>
 
     <h:body>
+        <f:event listener="#{notLoggedFilter.check}" type="preRenderView" />
         <f:event listener="#{filterEventCreator.check}" type="preRenderView" />
         <div id="header">
             <ui:include src="/Components/TopBar.xhtml">
