--- a/maven/meteocal/meteocal-web/src/main/webapp/protected/event/EventSuggestedChange.xhtml
+++ b/maven/meteocal/meteocal-web/src/main/webapp/protected/event/EventSuggestedChange.xhtml
@@ -7,13 +7,15 @@ and open the template in the editor.
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:ui="http://java.sun.com/jsf/facelets"f="http://java.sun.com/jsf/core"
+      xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:p="http://primefaces.org/ui">
     <h:head>
         <title>Events System's Suggestions Page</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </h:head>
     <body>
+        <f:event listener="#{notLoggedFilter.check}" type="preRenderView" />
         <ui:include src="/Components/TopBar.xhtml"></ui:include>
         </div>
         <h:form>
