--- a/maven/meteocal/meteocal-web/src/main/webapp/protected/personal/ManageInvitations.xhtml
+++ b/maven/meteocal/meteocal-web/src/main/webapp/protected/personal/ManageInvitations.xhtml
@@ -7,6 +7,7 @@ and open the template in the editor.
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:f="http://java.sun.com/jsf/core"
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:p="http://primefaces.org/ui">
     <h:head>
@@ -14,31 +15,33 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </h:head>
     <body>
+        <f:event listener="#{notLoggedFilter.check}" type="preRenderView" />
         <div id="header">
             <ui:include src="/Components/TopBar.xhtml"></ui:include>
         </div>
         <div>
-            
-        <h:form>    
-            <p:dataTable var="invitation" value="#{invitationManagementBean.invitations}">
-                <p:column headerText="DateTime">
-                    <h:outputText value="#{invitation.event.id}" />
-                </p:column>
-               
-                <p:column headerText="Event Name">
-                    <h:outputText value="#{invitation.event.name}" />
-                </p:column>
+            <p:panel id="basic" header="Basic" footer="Movie Details" style="margin-bottom:20px">
+                <h:panelGrid columns="2" cellpadding="10">
+                    <h:form>    
+                        <p:feedReader value="#{invitationManagementBean.invitations}" var="invitation">
 
-                <p:column headerText="Referred User">
-                    <h:outputText value="#{invitation.user.username}" />
-                </p:column>
+                            <h:outputText value="#{invitation.user.username}" />
+                            invites you to his events:  
+                            <p:link value="#{invitation.event.name}" outcome="/protected/event/EventPage.xhtml?eventID=#{invitation.event.id}"></p:link>
+                            Would you like to join him?
 
-                <p:column headerText="GoodWeather">
-                    <h:outputText value="#{invitation.seen}" />
-                </p:column>
+                            <p:splitButton value="Answer">
+                                <p:menuitem value="Joind" actionListener="#{invitationManagementBean.accept(invitation.eventID,invitation.userID)}" update="messages" icon="ui-icon-arrowrefresh-1-w" />
+                                <p:separator />
+                                <p:menuitem value="Decline" actionListener="#{invitationManagementBean.decline()}" ajax="false" icon="ui-icon-close" />
+                            </p:splitButton>
 
-            </p:dataTable>
-        </h:form>
+                            <p:separator />
+                        </p:feedReader>
+
+                    </h:form>
+                </h:panelGrid>
+            </p:panel>
 
         </div>
     </body>
