--- a/maven/meteocal/meteocal-web/src/main/webapp/protected/personal/Settings.xhtml
+++ b/maven/meteocal/meteocal-web/src/main/webapp/protected/personal/Settings.xhtml
@@ -7,6 +7,7 @@ and open the template in the editor.
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:f="http://java.sun.com/jsf/core"
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:p="http://primefaces.org/ui">
     <h:head>
@@ -19,6 +20,7 @@ and open the template in the editor.
         </style>
     </h:head>
     <body>
+        <f:event listener="#{notLoggedFilter.check}" type="preRenderView" />
         <div id="header">
             <ui:include src="/Components/TopBar.xhtml"></ui:include>
         </div>
