--- a/maven/meteocal/meteocal-web/src/main/webapp/Test/testEvent.xhtml
+++ b/maven/meteocal/meteocal-web/src/main/webapp/Test/testEvent.xhtml
@@ -13,6 +13,7 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </head>
     <body>
-        <h:form><p:commandButton action="#{testEventFindAllBean.test()}" value="Create event with datetime" type="submit" ajax="false" styleClass="block" /></h:form>
+        <h:form><p:commandButton action="#{testEvents.test()}" value="Create event with datetime" type="submit" ajax="false" styleClass="block" /></h:form>
+        <h:form><p:commandButton action="#{testEvents.testCreateAndForecast()}" value="Test create user, event and get forecasts" type="submit" ajax="false" styleClass="block" /></h:form>
     </body>
 </html>
